hw26 | added a new one module for liquidbase

--- a/homeworks_with_maven/pom.xml
+++ b/homeworks_with_maven/pom.xml
@@ -16,6 +16,11 @@
 
     <dependencies>
         <dependency>
+        <groupId>mysql</groupId>
+        <artifactId>mysql-connector-java</artifactId>
+        <version>8.0.33</version>
+        </dependency>
+        <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-core</artifactId>
             <version>1.4.11</version>
@@ -108,14 +113,11 @@
             <plugins>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-jar-plugin</artifactId>
-                    <version>2.4</version>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <version>3.10.1</version>
                     <configuration>
-                        <archive>
-                            <manifest>
-                                <mainClass>org.hw21.Main</mainClass>
-                            </manifest>
-                        </archive>
+                        <source>17</source>
+                        <target>17</target>
                     </configuration>
                 </plugin>
             </plugins>
