--- a/homeworks_with_maven/pom.xml
+++ b/homeworks_with_maven/pom.xml
@@ -7,6 +7,10 @@
     <groupId>org</groupId>
     <artifactId>hw_with_mvn</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
+    <modules>
+        <module>cache</module>
+    </modules>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
