--- a/homeworks_with_maven/pom.xml
+++ b/homeworks_with_maven/pom.xml
@@ -11,6 +11,7 @@
     <modules>
         <module>cache</module>
         <module>webservlet</module>
+        <module>hw30</module>
     </modules>
 
     <properties>
